--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .App {
   text-align: center;
+ 
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+#page-wrapper{
+  text-align: center;
+  height: 600px !important;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
