--- a/src/pages/Customer/Customer.css
+++ b/src/pages/Customer/Customer.css
@@ -6,3 +6,9 @@
     display: flex;
     justify-content: center;
 } */
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x:auto;
+  }
+  
